# NERE-HEALTH

./: .env.example  .env.production.template  .flake8  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Dockerfile  GUIDE_IMPLEMENTATION_ETAPE_PAR_ETAPE.md  PLAN_CORRECTION_100_PERCENT.md  RAPPORT_ANALYSE_SYSTEME_COMPLET.md  README.md  README_SETUP.md  RESUME_EXECUTIF_FAILLES_A_CORRIGER.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_PLAN.md  docker-compose.yml  fix_db_schema.sql  inspect_doc.py  pyproject.toml  pytest.ini  quality_check.sh  test.db  test_models_sqlite.py  test_models_temp.db  test_phase3_quick.py  tmp_debug_env.py  validate_imports.py
.github/: CODEOWNERS  pull_request_template.md
Documentations NERE/: DiagrammeClasse Nere_1.mpd  NERE 23Tables v3.docx  NERE Conception UML Complete.docx  NERE Diag Composants.docx  NERE Diag Deploiement.docx  NERE Diag Etat.docx  NERE Documentation SQL.docx  NERE Etude Comparative Waspito.docx  NERE Recap Technologies V2.docx  NERE Recap Technologies.docx  NERE Sequence Explication Complete.docx  NERE Tables Relations_classe Complet.docx  NERE UseCase Explication.docx  NERE_Chapitre1.docx  PLAN.docx  nere database.sql  nere_auto_tests.sql  nere_auto_tests_fixed.sql  nere_schema.sql  nere_seed_full.sql  seed_simple.sql
admin/: package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  audit_logger.py  audit_middleware.py  auth.py  config.py  cors_config.py  db.py  encryption.py  entrypoint.sh  error_handler.py  fix_admin.sql  https_middleware.py  main.py  (+16 more)
(+212 files in other folders)
